[package]
name = "image-resizer"
version = "0.2.8"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/image-resizer"
homepage = "https://magiclen.org/image-resizer"
keywords = ["image", "resize", "shrink", "sharpen"]
categories = ["command-line-utilities"]
description = "Resize or just shrink images and sharpen them appropriately."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/image-resizer"
branch = "master"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "2.33.1"
concat-with = "0.2"
terminal_size = "0.1"

image-convert = "0.10"
num_cpus = "1.10.0"
scanner-rust = "2.0.8"
str-utils = "0.1"
pathdiff = "0.1.0"
threadpool = "1.7.1"

walkdir = "2.3.1"

[dependencies.path-absolutize]
version = "3"
features = ["once_cell_cache"]