[package]
name = "image-resizer"
version = "0.2.13"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/image-resizer"
homepage = "https://magiclen.org/image-resizer"
keywords = ["image", "resize", "shrink", "sharpen"]
categories = ["command-line-utilities"]
description = "Resize or just shrink images and sharpen them appropriately."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "3.1.6"
concat-with = "0.2"
terminal_size = "0.1"

image-convert = "0.12"
num_cpus = "1.10.0"
scanner-rust = "2.0.8"
str-utils = "0.1"
pathdiff = "0.2"
threadpool = "1.7.1"

walkdir = "2.3.1"

[dependencies.path-absolutize]
version = "3"
features = ["once_cell_cache"]