[package]
name = "image-resizer"
version = "0.2.17"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/image-resizer"
homepage = "https://magiclen.org/image-resizer"
keywords = ["image", "resize", "shrink", "sharpen"]
categories = ["command-line-utilities"]
description = "Resize or just shrink images and sharpen them appropriately."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

image-convert = "0.15"
num_cpus = "1"
scanner-rust = "2"
str-utils = "0.1"
pathdiff = "0.2"
threadpool = "1"

walkdir = "2"